[xây dựng hệ thống]
yêu cầu = [
     "công cụ thiết lập>=58.0.4",
     "bánh xe>=0,37,0"
]
build-backend = "setuptools.build_meta"

[name]
tên = "NTTT"
phiên bản = "1.0"
readme = "README.md"
giấy phép = "MIT"
kho lưu trữ = "https://github.com/KAR13MA09"
include = ["README.md", "LICENSE", "files/email.json"]
description = "Công cụ lừa đảo tối ưu trong python với đường hầm kép, 77 mẫu và nhiều hơn nữa!"
tác giả = ["KasRoudra <kasroudrakrd@gmail.com>"]

[tool.poetry.dependency]
trăn = "^3,9"
yêu cầu = "^2.3.0"
giàu = "^13.0.0"
beautifulsoup4 = "^4.12"

[tool.poetry.scripts]
NTTT = "NTTT:chính"

[build-system.sdist]
định dạng = ["gztar"]

[build-system.bdist_wheel]
phổ quát = sai